--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <link rel="stylesheet" href="scripts/themes/bar/bar.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="scripts/nivo-slider.css" type="text/css" media="screen" />
     
+<!--[if gte IE 9]>
+  <style type="text/css">
+    .gradient {
+       filter: none;
+    }
+  </style>
+<![endif]-->
 
 </head>
 
@@ -29,11 +36,11 @@
 <div id="container">    
             <nav>
                         <ul>
-                        	<li id="home" class="nav_style">home</li>
-                                <li id="food" class="nav_style">food</li>
-                                <li id="drinks" class="nav_style">drinks</li>
-                                <li id="dance" class="nav_style">dance</li>
-                                <li id="contact" class="nav_style">contact</li>
+                        	<li id="home" class="nav_style"><a href="#">home</a></li>
+                                <li id="food" class="nav_style"><a href="#">food</a></li>
+                                <li id="drinks" class="nav_style"><a href="#">drinks</a></li>
+                                <li id="dance" class="nav_style"><a href="#">dance</a></li>
+                                <li id="contact" class="nav_style"><a href="#">contact</a></li>
                         </ul>  
                  </nav>             
 <!--	<!--   slider div (absolute)   --><div id="sub_container">
